# composify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cog.toml  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml
composify/: __init__.py  _attributes.py  _helper.py  _qualifiers.py  _registry.py  _resolutions.py  applications.py  attributes.py  blueprint.py  builder.py  constructor.py  container.py  errors.py  get.py  get_or_create.py  getter.py  injector.py  provider.py  qualifiers.py  registry.py  resolutions.py  rules.py  types.py  variance.py
composify/fastapi/: __init__.py  app.py  hooks.py  lifespan.py  router.py
composify/metadata/: __init__.py  attributes.py  base.py  qualifiers.py
composify/pydantic_settings/: __init__.py  rules.py  settings_provider.py
declarative_app/: blueprint.py  builder.py  construction.py  constructor.py  container.py  errors.py  metadata.py  provider.py  registry.py  rules.py  types.py
declarative_app/metadata/: __init__.py  attributes.py  base.py  qualifiers.py
docs/: index.md
docs/concepts/: resolver.md
docs/tutorial/: overview.md
tests/: conftest.py  example_complex_rules.py  utils.py
tests/fixture/: example_complex_rules.py  example_rules.py
tests/integration/: test_composify.py  test_fastapi.py  test_optional_rule.py  test_pydantic_settings.py
tests/unit/: test_annotated_typed.py  test_class_rule.py  test_construction.py  test_container.py  test_cyclic_dependency.py  test_generic_rule.py  test_generic_types.py  test_inherited_generic.py  test_inherited_types.py  test_named_resolution.py  test_resolver.py  test_rule.py  test_sync_construction.py
