[project]
name = "composify"
requires-python = ">=3.10"
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Suhendi Andigo", email = "suhendiandigo@gmail.com"},
]
maintainers = [
  {name = "Suhendi Andigo", email = "suhendiandigo@gmail.com"},
]
description = "Library to help compose python apps declaratively."
dependencies = [
    "typing-extensions>=4.12.2",
    "exceptiongroup>=1.2.2",
]
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "composify/__init__.py"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "pytest-asyncio-cooperative>=0.37.0",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 80
extend-select = "B950"
extend-ignore = "E203,E501,E701"

[tool.pytest.ini_options]
asyncio_mode = "strict" 
pythonpath = [
  ".",
  "tests",
]
testpaths = [
    "tests/unit",
    "tests/integration",
]